fixed spacing changed by fonts

--- a/styles.css
+++ b/styles.css
@@ -143,12 +143,12 @@ body {
 }
 .contact-info h4{
   position: relative;
-  left: 2vw;
+  left: 1vw;
 }
 #copy-button{
   position: relative;
   top: -18px;
-  left: 213px;
+  left: 203px;
   width: 25px;
   height: 20px;
   background-color: #FAFAFA;
